--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "engines": {
+    "node": "12.13.0",
+	"npm": "6.14.2",
+	"yarn": "1.19.0"
+  }, 
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
