--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.19.2",
     "compression": "^1.7.4",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.3",
     "morgan": "^1.10.0",
     "react": "^16.13.1",
     "react-axios": "^2.0.3",
